# tts_webui_extension.audiocraft_mac

./: .gitignore  README.md  pyproject.toml  setup.py
extension_audiocraft_mac/: main.py
tts_webui_extension/audiocraft_mac/: main.py
