[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.audiocraft_mac"
version = "0.0.8"
description = "Audiocraft fork for Apple Silicon"
authors = [
    {name = "rsxdalv"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "audiocraft_apple_silicon @ git+https://github.com/rsxdalv/audiocraft@audiocraft_apple_silicon_ext",
]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts_webui_extension.audiocraft_mac"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# This will find all namespace packages automatically
namespaces = true
